--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "livekit-client": "^2.15.14",
     "livekit-server-sdk": "^2.14.0",
     "next": "16.0.1",
     "react": "19.2.0",
