--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 LIVEKIT_API_KEY=your_api_key_here
 LIVEKIT_API_SECRET=your_api_secret_here
 LIVEKIT_URL=https://your-livekit-domain.livekit.cloud
+NEXT_PUBLIC_LIVEKIT_URL=https://your-livekit-domain.livekit.cloud
